@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1134 2003/06/18 13:29:10 andijahja Exp $
+ * $Id: ChangeLog,v 1.1135 2003/06/18 19:28:56 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-06-18 16:45 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
+  * source/rdd/dbfntx/dbfntx1.c
+    ! Fixed: SET ORDER was always changing the found() status to .F.
 
 2003-06-18 12:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/classes.h
